# cdhf

./: CITATION.cff  Makefile  Pipfile  README.md  __init__.py  cdhf.html  index.html  init.sh  search.js  setup.cfg
cdhf/: channel.html  channel_member.html  channel_member_history_entry.html  data.html  team.html  team_member.html  user_data.html
src/: cd.py  channel_member.py  config.py  example.ipynb  main.py  preprocessor.py  processor.py  team.py
src/cdhf/: data.py  team.py
src/mattermost/: channel.py  channel_member.py  channel_member_history_entry.py  data.py  preprocessor.py  team.py  team_member.py  user_data.py
