[metadata]
name = cdhf
version = 1.1
author = Martin Pobaschnig
author_email = mpobaschnig@protonmail.com
description = CERN Data Handling Framework is a small framework to work with the CERN Anonymized Mattermost Data set
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mpobaschnig/cdhf
project_urls =
    Bug Tracker = https://github.com/mpobaschnig/cdhf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Utilities
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src